# nmscommand

./: .gitignore  2do.md  LICENSE  README.md  go.mod  go.sum  main.go  nmscommand.db  pyproject.toml
goattick/: go.mod  go.sum  main.go  nmscommand.db
goattick/model/: db.go  mission.go  mission_test.go  repository.go
goattick/tui/: app.go
goattick/utils/: config.go
model/: datamodels.py  db.go  dbmodels.py  mission.go  mission_test.go  repository.go  repository.py
nmscommand/model/: repository.py
nmscommand/tui/: app.py  nmscommand.tcss
nmscommand/tui/nmswidgets/: home.py  missiondetails.py  newmission.py  welcome.py
nmscommand/tui/widgets/: dummydata.py  home.py  newmission.py  welcome.py
tui/: app.py  nmscommand.tcss
tui/model/: dbmodels.py  repository.py
tui/nmswidgets/: alertmessage.py  detailsmissionlog.py  dummydata.py  editmission.py  home.py  missiondetails.py  newmission.py  newmissionlog.py  welcome.py
